<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Travel CheckList</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="travel_checklist">Your Travel Checklist</string>
    <string name="ticket">Ticket</string>
    <string name="wallet">Wallet</string>
    <string name="mobile">Mobile Recharge</string>
    <string name="luggage">Luggage</string>
    <string name="clear">Reset</string>
    <string name="camera">Camera and/or Earphones</string>
    <string name="save">Save</string>
    <string name="Note">Note:</string>
    <string name="Notes">Write here..</string>

</resources>
